--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -245,7 +245,7 @@ footer {
         justify-self: start;
     }
     .cta-button{
-        padding:0.6rem 1.5rem;
+        padding:0.5rem 1rem;
     }
     .sub-heading{
         font-size:1.5rem;  
@@ -280,13 +280,15 @@ footer {
 
     .nav-links {
       flex-direction: column;
+      gap:1rem;
       background-color: rgba(25, 25, 25, 0.95);
       position: absolute;
       top: 60px; 
       right: 0;
-      width: 200px;
+      width: 130px;
       padding: 10px;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+      z-index: 1000;
     }
   
     .nav-links.active {
@@ -297,3 +299,10 @@ footer {
       display: flex;
     }
 }
+@media (max-width:380px) {
+    .nav-links {
+        
+        width: 100px;
+       
+      }
+    }
